--- a/css/style.css
+++ b/css/style.css
@@ -1818,13 +1818,21 @@ Version: 1.0
         padding: 1rem 2rem 2rem;
       }
 
-      /* .main-banner__text {
+      .main-banner__text {
         width: 50%;
       }
 
       .main-banner__image {
         width: 40%;
-      } */
+      }
+
+      .banner__category {
+        font-size: 0.775rem;
+      }
+
+      .second-banner__title {
+        font-size: 1.475rem;
+      }
   }
 
   @media only screen and (max-width: 991.98px){
