--- a/css/style.css
+++ b/css/style.css
@@ -1870,6 +1870,10 @@ Version: 1.0
       .header-top__left {
         flex-wrap: wrap;
       }
+
+      .main-banner__title {
+        font-size: 2.3rem;
+      }
   }
 
   @media only screen  and (max-width: 480px) {
