--- a/css/style.css
+++ b/css/style.css
@@ -1962,6 +1962,10 @@ Version: 1.0
       .header-bottom__search {
         margin-bottom: 0.5rem;
       }
+
+      .second-banner__title {
+        font-size: 1.175rem;
+      }
   }
 
   /* Just for dev responsive */
