--- a/css/style.css
+++ b/css/style.css
@@ -1980,6 +1980,10 @@ Version: 1.0
       .main-banner__title {
         font-size: 2.3rem;
       }
+
+      .section-title {
+        font-size: 2.2rem;
+      }
   }
 
   @media only screen  and (max-width: 480px) {
