--- a/css/style.css
+++ b/css/style.css
@@ -1969,6 +1969,14 @@ Version: 1.0
       .prod-categories {
         margin-bottom: 1.5rem;
       }
+
+      .q-view-popup {
+        width: 100%;
+      }
+
+      .q-view-popup__btn {
+        padding: 1em 1em 0.8em 1em;
+      }
   }
 
   @media only screen and (max-width: 575.98px){
