--- a/css/style.css
+++ b/css/style.css
@@ -1855,6 +1855,11 @@ Version: 1.0
         margin-top: 1rem;
         margin-bottom: 3rem;
       }
+
+      .new-products .section-description, 
+      .latest-news .section-description {
+        width: 100%;
+      }
   }
 
   @media only screen and (max-width: 991.98px){
