--- a/css/style.css
+++ b/css/style.css
@@ -1869,7 +1869,28 @@ Version: 1.0
         flex-wrap: wrap;
       }
 
-      .latest-news {margin-bottom: 2rem;}
+      .latest-news {
+        margin-bottom: 2rem;
+      }
+
+      .footer__social {
+        order: -1;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 3rem;
+      }
+
+      .footer__subscribe {
+        margin-bottom: 1rem;
+        display: block;
+        width: 100%;
+        text-align: center;
+      }
+
+      .footer__input {
+        width: 80%;
+      }
   }
 
   @media only screen and (max-width: 991.98px){
@@ -2195,7 +2216,6 @@ Version: 1.0
   }
 
   /* Just for dev responsive */
-  .sidebar-categories__drop-down,
-  .footer__input {
+  .sidebar-categories__drop-down {
     display: none;
   }
