--- a/css/style.css
+++ b/css/style.css
@@ -266,7 +266,9 @@ Version: 1.0
     .btn,
     .prod-categories__tab,
     .prod-categories__title,
-    .latest-news__title {
+    .latest-news__title,
+    .second-b-banners__btn,
+    .main-bottom-banner {
       font-weight: 700;
     }
 
@@ -290,7 +292,9 @@ Version: 1.0
     .prod-categories__tab,
     .sidebar-tags__item,
     .second-b-banners__title,
-    .main-b-banner__title {
+    .main-b-banner__title,
+    .second-b-banners__btn,
+    .main-bottom-banner {
       text-transform: uppercase;
     }
 
@@ -1504,23 +1508,62 @@ Version: 1.0
 
         /* Hovers to bottom banners */
 
-        .main-bottom-banner img {
-          transition: .5s ease;
+        .main-b-banner__btn,
+        .second-b-banners__btn {
+          color: #fff;
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          right: 0;
+          padding: 0.5rem;
+          text-align: center;
+          border: 1px solid #fff;
+          display: inline-block;
+          width: 35%;
+          transition: .3s ease;
+          visibility: hidden;
+          opacity: 0;
+          transform: translateY(20px);
+        }  
+
+        .main-b-banner__btn {
+          bottom: -20%;
+          margin-left: auto;
+          margin-right: auto;
         }
 
         .second-b-banners__item {
-          background-size: calc(72%);
-          transition: .3s ease;
+          position: relative;
         }
 
-        .second-b-banners__item:hover,
-        .second-b-banners__item:focus {
-          background-size: calc(72% + 3px);
+        .second-b-banners__btn {
+          bottom: 12%;
+          margin-left: auto;
+          margin-right: 1.5rem;
         }
 
-        .main-bottom-banner:hover img,
-        .main-bottom-banner:focus img {
-          transform: translateX(10px);
+        .second-b-banners__item:first-of-type .second-b-banners__btn {
+          margin-left: 1.5rem;
+          margin-right: auto;
+        }
+
+        /* Hovers of buttons in bottom banners */
+        .main-b-banner__btn:hover,
+        .second-b-banners__btn:hover,
+        .main-b-banner__btn:focus,
+        .second-b-banners__btn:focus {
+          background-color: #000000;
+          text-decoration: none;
+          color: #ffffff;
+        }
+
+        .second-b-banners__item:hover .second-b-banners__btn,
+        .main-bottom-banner:hover .main-b-banner__btn,
+        .second-b-banners__item:focus-within .second-b-banners__btn,
+        .main-bottom-banner:focus-within .main-b-banner__btn {
+          opacity: 1;
+          visibility: visible;
+          transform: translateY(0);
         }
 
       /* 6.4.4. New products */
@@ -2223,4 +2266,4 @@ Version: 1.0
   /* Just for dev responsive */
   .sidebar-categories__drop-down {
     display: none;
-  }
+  }  
