--- a/css/style.css
+++ b/css/style.css
@@ -268,7 +268,8 @@ Version: 1.0
     .prod-categories__title,
     .latest-news__title,
     .second-b-banners__btn,
-    .main-bottom-banner {
+    .main-bottom-banner,
+    .latest-news__link {
       font-weight: 700;
     }
 
@@ -294,7 +295,8 @@ Version: 1.0
     .second-b-banners__title,
     .main-b-banner__title,
     .second-b-banners__btn,
-    .main-bottom-banner {
+    .main-bottom-banner,
+    .latest-news__link {
       text-transform: uppercase;
     }
 
@@ -1664,6 +1666,114 @@ Version: 1.0
       .latest-news__tag {
         margin: 0 4px;
       }
+
+      .latest-news__img-cont {
+        background: linear-gradient(45deg, #224c68 0%,#2169bd 40%,#224c68 100%);
+        position: relative;
+        z-index: 1;
+        overflow: hidden;
+        text-align: center;
+        cursor: pointer;
+      }
+
+      .latest-news__img {
+        opacity: 0.9;
+        transition: opacity 0.35s;
+      }
+
+      .latest-news__img-cont:hover .latest-news__img {
+        opacity: 0.5;
+      }
+
+      .latest-news__link-cont {
+        padding: 3em;
+        background-color: rgba(58,52,42,0.7);
+        transition: background-color 0.35s;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+      }
+
+      .latest-news__img-cont:hover .latest-news__link-cont {
+        background-color: rgba(58,52,42,0);
+      }
+
+      .latest-news__link-cont::before {
+        position: absolute;
+        top: 30px;
+        right: 30px;
+        bottom: 30px;
+        left: 30px;
+        border: 1px solid #fff;
+        content: '';
+        pointer-events: none;
+        opacity: 0;
+        transition: opacity 0.35s, transform 0.35s;
+        transform: scale(0);
+      }
+
+      .latest-news__link-cont,
+      .latest-news__link {
+        opacity: 0;
+        transition: opacity 0.35s, transform 0.35s;
+        transform: scale(0) translate(-50%, -50%);
+      }
+
+
+      .latest-news__img-cont:hover .latest-news__link-cont::before,
+      .latest-news__img-cont:hover .latest-news__link {
+        transform: scale(1) translate(-50%, -50%);
+        opacity: 1;
+      }  
+      
+      .latest-news__link {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        text-align: center;
+        color: #ffffff;
+        border: 1px solid #fff;
+        border-radius: 5px;
+        padding: 0.5rem 1rem;  
+        transform-origin: left;
+        transition: .3s ease;
+      }
+
+      .latest-news__link:hover {
+        background-color: #000;
+        color: #fff;
+        text-decoration: none;
+      }
+
+      /* ####### */
+
+      /* .latest-news__img::before {
+        position: absolute;
+        top: 30px;
+        right: 30px;
+        bottom: 30px;
+        left: 30px;
+        border: 1px solid #fff;
+        content: '';        
+      }
+
+      
+
+      .latest-news__img::before,
+      .latest-news__link {
+        transform: scale(0);
+        transition: opacity 0.35s, transform 0.35s;
+        opacity: 0;
+      }
+
+      .latest-news__img:hover::before,
+      .latest-news__link:hover {
+        transform: scale(1);
+        opacity: 1;
+      } */
+      
   /* 6.5. Footer */
   footer {
     background-color: #262626;
@@ -2230,7 +2340,7 @@ Version: 1.0
       .main-b-banner__btn {
         bottom: -20%;
       }
-      
+
     }
 
   @media only screen and (min-width: 320px) and (max-width: 400px) {
