--- a/css/style.css
+++ b/css/style.css
@@ -2185,6 +2185,18 @@ Version: 1.0
       .main-b-banner__btn {
         width: 50%;
       }
+
+      .latest-news__link {
+        top: 80%;
+        padding: 0.2rem 0.5rem;
+        transform: scale(1) translate(-50%, -50%);
+        opacity: 1;
+      }
+
+      .latest-news__img,
+      .latest-news__img-cont:hover .latest-news__img {
+        opacity: 0.7;
+      }      
   }
 
   @media only screen and (max-width: 767.98px){
@@ -2223,6 +2235,11 @@ Version: 1.0
 
       .second-bottom-banners {
         flex-direction: column;
+      }
+
+      .latest-news__link {
+        width: 90%;
+        padding: 0rem 0.5rem;
       }
   }
 
@@ -2291,6 +2308,21 @@ Version: 1.0
         margin-left: auto;
         margin-right: auto;
       }
+
+      .latest-news__item {
+        width: 90%;
+        margin-left: auto;
+        margin-right: auto;
+      }
+
+      .latest-news__img {
+        width: 100%;
+      }
+
+      .latest-news__link {
+        width: 50%;
+        padding: 1rem 0.5rem;
+      }
   }
 
   @media only screen  and (max-width: 480px) {
@@ -2339,6 +2371,10 @@ Version: 1.0
 
       .main-b-banner__btn {
         bottom: -20%;
+      }
+
+      .latest-news__item {
+        width: 100%;
       }
 
     }
