--- a/css/style.css
+++ b/css/style.css
@@ -1804,8 +1804,18 @@ Version: 1.0
   }
 
   .footer-links__title {
+    position: relative;
+    display: inline-block;
     color: #fff;
     font-size: 16px;
+    pointer-events: none;
+    text-transform: uppercase;
+  }
+
+  .footer-links__title::before {
+    display: none;
+    position: absolute;
+    right: -20%;
   }
 
   .footer-link__list {
@@ -2031,7 +2041,6 @@ Version: 1.0
       }
 
       .footer__social {
-        order: -1;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -2240,6 +2249,14 @@ Version: 1.0
       .latest-news__link {
         width: 90%;
         padding: 0rem 0.5rem;
+      }
+
+      .footer-links__title {
+        pointer-events: auto;
+      }
+
+      .footer-links__title::before {
+        display: block;
       }
   }
 
@@ -2467,3 +2484,19 @@ Version: 1.0
   .sidebar-categories__drop-down {
     display: none;
   }  
+/* Media translators */
+@media (min-width: 320px) {
+  head {
+      width: 320px;
+  }
+}
+@media (min-width: 480px) {
+  head {
+      width: 480px;
+  }
+}
+@media (min-width: 700px) {
+  head {
+      width: 700px;
+  }
+}
