--- a/css/style.css
+++ b/css/style.css
@@ -2044,6 +2044,7 @@ Version: 1.0
         display: flex;
         flex-direction: column;
         align-items: center;
+        margin-top: 2rem;
         margin-bottom: 3rem;
       }
 
@@ -2257,7 +2258,7 @@ Version: 1.0
 
       .footer-links__title::before {
         display: block;
-      }
+      }      
   }
 
   @media only screen and (max-width: 575.98px){
@@ -2484,19 +2485,3 @@ Version: 1.0
   .sidebar-categories__drop-down {
     display: none;
   }  
-/* Media translators */
-@media (min-width: 320px) {
-  head {
-      width: 320px;
-  }
-}
-@media (min-width: 480px) {
-  head {
-      width: 480px;
-  }
-}
-@media (min-width: 700px) {
-  head {
-      width: 700px;
-  }
-}
