--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,6 @@ Version: 1.0
   div.fancy-select {
     position: relative;
     font-weight: bold;
-    text-transform: uppercase;
     font-size: 13px;
     color: #46565D;
   }
@@ -73,7 +72,7 @@ Version: 1.0
   }
 
   div.fancy-select select:focus + div.trigger {
-    box-shadow: 0 0 0 2px #4B5468;
+    box-shadow: 0 0 0 1px #ced4da;
   }
 
   div.fancy-select select:focus + div.trigger.open {
@@ -81,19 +80,21 @@ Version: 1.0
   }
 
   div.fancy-select div.trigger {
-    border-radius: 4px;
+    display: block;
+    padding: 1rem 4rem 2rem 1rem;
+    border-radius: 0;
     cursor: pointer;
-    padding: 10px 24px 9px 9px;
+    font-size: 0.75rem;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
     position: relative;
-    background: #99A5BE;
-    border: 1px solid #99A5BE;
-    border-top-color: #A5B2CB;
-    color: #4B5468;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
-    width: 200px;
+    color: #a9a9a9;
+    width: 100%;
+    line-height: 1.5;
+    background-color: #fff;
+    border: 1px solid #ced4da;
+    height: calc(1.5em + .75rem + 2px);    
 
     transition: all 240ms ease-out;
     -webkit-transition: all 240ms ease-out;
@@ -115,10 +116,8 @@ Version: 1.0
   }
 
   div.fancy-select div.trigger.open {
-    background: #4A5368;
-    border: 1px solid #475062;
+    background: #ced4da;
     color: #7A8498;
-    box-shadow: none;
   }
 
   div.fancy-select div.trigger.open:after {
@@ -128,6 +127,7 @@ Version: 1.0
   div.fancy-select ul.options {
     list-style: none;
     margin: 0;
+    padding: 0;
     position: absolute;
     top: 40px;
     left: 0;
@@ -136,7 +136,7 @@ Version: 1.0
     z-index: 50;
     max-height: 200px;
     overflow: auto;
-    background: #62C8BF;
+    background: linear-gradient(to bottom, #7c878a, #2789ae);
     border-radius: 4px;
     border-top: 1px solid #7DD8D2;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
@@ -147,6 +147,21 @@ Version: 1.0
     -moz-transition: opacity 300ms ease-out, top 300ms ease-out, visibility 300ms ease-out;
     -ms-transition: opacity 300ms ease-out, top 300ms ease-out, visibility 300ms ease-out;
     -o-transition: opacity 300ms ease-out, top 300ms ease-out, visibility 300ms ease-out;
+  }
+
+  div.fancy-select ul.options::-webkit-scrollbar {
+    -webkit-appearance: none;
+    width: 3px;
+  }
+
+  div.fancy-select ul.options::-webkit-scrollbar-track {
+    background-color: lightgray;
+    border-radius: 50px;
+    box-shadow: inset 0 0 5px 0 rgba(0, 0, 0, 0.5);
+  }
+  
+  div.fancy-select ul.options::-webkit-scrollbar-thumb {
+    background-color: #000000;    
   }
 
   div.fancy-select ul.options.open {
@@ -186,8 +201,8 @@ Version: 1.0
   }
 
   div.fancy-select ul.options li {
-    padding: 8px 12px;
-    color: #2B8686;
+    padding: 5px 30px;
+    color: #fff;
     cursor: pointer;
     white-space: nowrap;
 
@@ -199,11 +214,11 @@ Version: 1.0
   }
 
   div.fancy-select ul.options li.selected {
-    background: rgba(43,134,134,0.3);
     color: rgba(255,255,255,0.75);
   }
-
+  
   div.fancy-select ul.options li.hover {
+    background: #3c88fe;
     color: #fff;
   }
 
@@ -1070,27 +1085,7 @@ Version: 1.0
       .header__middle .vish-list__btn:focus,
       .header__middle .shopping-cart__btn:focus {
         text-decoration: none;
-      }
-
-      /* Mechanism of opening and closing */
-      /* .shoping-cart,
-      .vish-list {
-        visibility: hidden;
-        opacity: 0;
-      }
-
-      .vish-list-popup:hover ~ .vish-list,
-      .vish-list-popup:focus ~ .vish-list,
-      .vish-list:hover,
-      .vish-list:focus-within,
-      .shoping-cart-popup:hover ~ .shoping-cart,
-      .shoping-cart-popup:focus ~ .shoping-cart,  
-      .shoping-cart:hover,
-      .shoping-cart:focus-within {
-        visibility: visible !important;
-        opacity: 1 !important;
-      } */
-      /* End styles for wishlist and shopping popups */
+      }      
     
     .search__input,
     .search__select {
