--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,8 @@ Version: 1.0
   /* 1.1. FancySelect */
   div.fancy-select {
     position: relative;
+    width: 100%;
+    max-width: 200px;
     font-weight: bold;
     font-size: 13px;
     color: #46565D;
