--- a/css/style.css
+++ b/css/style.css
@@ -2211,6 +2211,10 @@ Version: 1.0
       .footer__input {
         width: 80%;
       }
+
+      .sidenav {
+        margin-top: 3.5rem;
+      }
   }
 
   @media only screen and (max-width: 991.98px){
