--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,8 @@ Version: 1.0
   4.#. General styles of product items
   4.#. Section titles and descriptions
   4.#. Quick popup
-  4.#. Hover buttons  
+  4.#. Hover buttons
+  4.#. Off-canvas
 5. Custom styles
   5.0. Custom containters (Bootstrap 4)
   5.1. Active slide in category slider (Bootstrap slider) 
@@ -756,7 +757,45 @@ Version: 1.0
     opacity: 1;
     transform: translateY(0);
     pointer-events: auto;
-  }  
+  }
+
+  /* 4.#. Off-canvas */
+  /* The side navigation menu */
+  .sidenav {
+    height: 100%; /* 100% Full-height */
+    max-width: 0; /* 0 width - change this with JavaScript */
+    position: fixed; /* Stay in place */
+    z-index: 10; /* Stay on top */
+    top: 0;
+    right: 0;
+    background-color: #fff; /* Black*/
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding-top: 60px; /* Place content 60px from the top */
+    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+    padding: 60px 0 0 0;
+    box-shadow: inset 1px 0 0 0px black;
+  }
+
+  /* Position and style the close button (top right corner) */
+  .sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 15px;
+    font-size: 36px;
+    margin-left: 50px;
+    z-index: 1;
+  }
+
+  .off-canvas-open {
+    max-width: 400px;
+    padding: 60px 3rem 0.5rem 1.5rem;
+  }
+
+  /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+  @media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+  }
+  
   
 /* 5. Custom styles */
   /* 5.0. Custom containters (Bootstrap 4) */
@@ -918,7 +957,7 @@ Version: 1.0
     /* 6.1.2. Header-bottom */
       /* Wishlist and shopping cart popups */
       /* Main styles */
-      .shoping-cart,
+      /* .shoping-cart,
       .vish-list {      
         position: absolute;
         top: 100%;
@@ -930,7 +969,7 @@ Version: 1.0
         border: 1px solid #e1e1e1;
         transition: .3s ease;
         z-index: 3;
-      } 
+      }  */
     
       .shoping-cart a,
       .vish-list a {
@@ -2656,44 +2695,23 @@ Version: 1.0
         flex: 0 0 20%;
         max-width: 20%;
       }
+
+      .header-top__currency-button {
+        padding-left: 0.5rem;
+      }
+
+      .header-top__language-button::after, 
+      .header-top__currency-button::after {
+        margin-right: 0.3rem;
+        margin-left: 0.3rem;
+      }
+
+      .off-canvas-open {
+        max-width: 320px;
+      }
   }
 
   /* Just for dev responsive */
   .sidebar-categories__drop-down {
     display: none;
-  }  
-
-  /* The side navigation menu */
-  .sidenav {
-    height: 100%; /* 100% Full-height */
-    max-width: 0; /* 0 width - change this with JavaScript */
-    position: fixed; /* Stay in place */
-    z-index: 10; /* Stay on top */
-    top: 0;
-    right: 0;
-    background-color: #fff; /* Black*/
-    overflow-x: hidden; /* Disable horizontal scroll */
-    padding-top: 60px; /* Place content 60px from the top */
-    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
-    padding: 60px 0 0 0;
-  }
-
-  /* Position and style the close button (top right corner) */
-  .sidenav .closebtn {
-    position: absolute;
-    top: 0;
-    right: 15px;
-    font-size: 36px;
-    margin-left: 50px;
-    z-index: 1;
-  }
-
-  .off-canvas-open {
-    max-width: 400px;
-    padding: 60px 3rem 0.5rem 1.5rem;
-  }
-
-  /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
-  @media screen and (max-height: 450px) {
-    .sidenav {padding-top: 15px;}
-  }
+  }    
