--- a/css/style.css
+++ b/css/style.css
@@ -784,12 +784,13 @@ Version: 1.0
     font-size: 36px;
     margin-left: 50px;
     z-index: 1;
-  }
+  }  
 
   .off-canvas-open {
-    max-width: 400px;
+    max-width: 30vw;
     padding: 60px 3rem 0.5rem 1.5rem;
-  }
+    width: 100%;
+}
 
   /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
   @media screen and (max-height: 450px) {
@@ -2254,6 +2255,10 @@ Version: 1.0
       .sidenav {
         margin-top: 3.5rem;
       }
+
+      .off-canvas-open {
+        max-width: 40vw;
+      }
   }
 
   @media only screen and (max-width: 991.98px){
@@ -2402,7 +2407,11 @@ Version: 1.0
       .latest-news__img,
       .latest-news__img-cont:hover .latest-news__img {
         opacity: 0.7;
-      }      
+      }
+
+      .off-canvas-open {
+        max-width: 50vw;
+      }
   }
 
   @media only screen and (max-width: 767.98px){
@@ -2454,7 +2463,11 @@ Version: 1.0
 
       .footer-links__title::before {
         display: block;
-      }      
+      }
+
+      .off-canvas-open {
+        max-width: 60vw;
+      }
   }
 
   @media only screen and (max-width: 575.98px){
@@ -2541,14 +2554,14 @@ Version: 1.0
       div.fancy-select {
         max-width: 140px;
       }
+
+      .off-canvas-open {
+        max-width: 70vw;
+      }
   }
 
   @media only screen  and (max-width: 480px) {
-      .test:after  { content: '@media (max-width: 480px)';}  
-      .shoping-cart, 
-      .vish-list {
-        width: 320px;
-      }
+      .test:after  { content: '@media (max-width: 480px)';}      
 
       .search__input,
       .search__select {
@@ -2593,6 +2606,10 @@ Version: 1.0
 
       .latest-news__item {
         width: 100%;
+      }
+
+      .off-canvas-open {
+        max-width: 90vw;
       }
 
     }
